# musicapp

./: .gitattributes  .gitignore
client/: analysis_options.yaml  pubspec.yaml
client/lib/: main.dart
client/lib/core/: utils.dart
client/lib/core/constants/: server_constant.dart
client/lib/core/failure/: failure.dart
client/lib/core/theme/: theme.dart
client/lib/core/widgets/: auth_gradient_button.dart  custom_field.dart
client/lib/features/auth/model/: user_model.dart
client/lib/features/auth/repository/: auth_local_repository.dart  auth_remote_repository.dart
client/lib/features/auth/view/pages/: login_page.dart  signup_page.dart
client/lib/features/auth/view/widgets/: auth_gradient_button.dart  custom_field.dart
client/lib/features/auth/viewmodel/: auth_viewmodel.dart  auth_viewmodel.g.dart
client/lib/features/home/repository/: home_repository.dart
client/lib/features/home/view/pages/: home_page.dart  upload_song_page.dart
client/lib/features/home/view/widgets/: audio_wave.dart
client/lib/features/home/viewmodel/: home_viewmodel.dart  home_viewmodel.g.dart
server/: .gitignore  database.py  main.py  pyproject.toml  requirements.txt  test.py
server/middleware/: auth_middleware.py
server/models/: base.py  song.py  user.py
server/routes/: auth.py  song.py
server/schemas/: user_create.py  user_login.py
